@@ -16,16 +16,19 @@ import tc.oc.pgm.util.MethodParsers;
 import tc.oc.pgm.util.XMLParser;
 import tc.oc.pgm.util.xml.InvalidXMLException;
 import tc.oc.pgm.util.xml.Node;
+import tc.oc.pgm.util.xml.XMLFluentParser;
 import tc.oc.pgm.util.xml.XMLUtils;
 
 public abstract class RegionParser implements XMLParser<Region, RegionDefinition> {
 
   protected final Map<String, Method> methodParsers;
   protected final MapFactory factory;
+  protected final XMLFluentParser parser;
 
   public RegionParser(MapFactory factory) {
     this.factory = factory;
     this.methodParsers = MethodParsers.getMethodParsersForClass(getClass());
+    this.parser = factory.getParser();
   }
 
   @Override
@@ -137,14 +140,11 @@ public abstract class RegionParser implements XMLParser<Region, RegionDefinition
     if (y != null) halves.add(new HalfspaceRegion(new Vector(0, y, 0), new Vector(0, dir, 0)));
     if (z != null) halves.add(new HalfspaceRegion(new Vector(0, 0, z), new Vector(0, 0, dir)));
 
-    switch (halves.size()) {
-      case 0:
-        throw new InvalidXMLException("Expected at least one of x, y, or z attributes", el);
-      case 1:
-        return halves.get(0);
-      default:
-        return new Intersect((Region[]) halves.toArray());
-    }
+    return switch (halves.size()) {
+      case 0 -> throw new InvalidXMLException("Expected at least one of x, y, or z attributes", el);
+      case 1 -> halves.getFirst();
+      default -> new Intersect(halves.toArray(Region[]::new));
+    };
   }
 
   @MethodParser("below")
@@ -289,6 +289,17 @@ public abstract class RegionParser implements XMLParser<Region, RegionDefinition
     Vector origin = XMLUtils.parseVector(el.getAttribute("origin"), new Vector());
 
     return new MirroredRegion(this.parseChildren(el), origin, normal);
+  }
+
+  @MethodParser("resize")
+  public ResizedRegion parseResize(Element el) throws InvalidXMLException {
+    Region child = this.parseChildren(el);
+    Vector min = parser.vector(el, "min").attr().required();
+    Vector max = parser.vector(el, "max").attr().required();
+    boolean relative = parser.parseBool(el, "relative").attr().orFalse();
+    validate(child, BlockBoundedValidation.INSTANCE, new Node(el));
+    validate(child, StaticValidation.INSTANCE, new Node(el));
+    return new ResizedRegion(child, min, max, relative);
   }
 
   @MethodParser("everywhere")
